<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
  >

    <ListView
        android:cacheColorHint="@android:color/white"
        android:id="@+id/listViewShowAllRefuel"
        android:layout_width="match_parent"
        android:layout_height="200dp">
    </ListView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginLeft="50dp">


        <Button
            android:id="@+id/btn_backToMain"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_backtoMain" />

        <Button
            android:id="@+id/btn_Update"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_update" />

        <Button
            android:id="@+id/btn_Delete"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_delete" />


    </LinearLayout>
</LinearLayout>